--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <service android:name=".Services.GameService"/>
-        <service android:name=".Services.DummyGameService" />
+        <service android:name=".Services.DummyGameService"/>
+
         <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -23,6 +24,8 @@
         <activity
             android:name=".LoadingActivity"
             android:noHistory="true">
+        </activity>
+        <activity android:name=".DraftingActivity">
         </activity>
     </application>
 
